@@ -1,3 +1,13 @@
+2010-05-20  Zhenyao Mo  <zmo@google.com>
+
+        Reviewed by Dimitri Glazkov.
+
+        Map RGBA4/RGB5_A1 to RGBA and RGB565 to RGB in RenderbufferStorage
+        https://bugs.webkit.org/show_bug.cgi?id=39077
+
+        * fast/canvas/webgl/framebuffer-object-attachment-expected.txt: Add the test cases for color renderbuffer creation and attachment to framebuffer.
+        * fast/canvas/webgl/framebuffer-object-attachment.html: Ditto.
+
 2010-05-20  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Dave Hyatt.
